fixes alignment of main content and footer

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,9 @@
 body {
   margin: 0 auto;
-  position: absolute;
+  display: inline-block;
+  width: 100%;
 }
+
 header {
   display: flex;
   flex-direction: row;
